# game-template

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.h  config_windows_pack.nsh  docker-compose.yml  increment_version.py  instrucoes_windows_pack.md  unbgames.md  windows_pack.nsi
cmake/: mingw-toolchain.cmake
docker/pack/: linux.Dockerfile
game/assets/fonts/: fontes.txt
game/assets/sounds/: sons.txt
game/assets/sprites/: sprites.txt
game/engine/: CMakeFiles.txt
game/engine/include/: game.hpp  include.txt  sdl2include.h  sdl_log.h
game/engine/src/: game.cpp  source.txt
game/include/: config.h.in
game/src/: config.cpp  main.cpp
